1、根据登录人查询相关地址信息 2、结算页面数据渲染 3、结算页面：默认收件人信息显示 4、结算页面：记录选中收件人 5、结算页面：渲染默认收货人信息 6、结算页面：动态加载支付方式

--- a/changgou_web/changgou_web_order/src/main/resources/templates/cart.html
+++ b/changgou_web/changgou_web_order/src/main/resources/templates/cart.html
@@ -184,7 +184,7 @@
 						</span>
 					</div>
 					<div class="sumbtn">
-						<a class="sum-btn" href="getOrderInfo.html" target="_blank">结算</a>
+						<a class="sum-btn" href="/api/worder/ready/order" target="_blank">结算</a>
 					</div>
 				</div>
 			</div>
